# term_paper

./: README.md  pyproject.toml
src/: extraction.py  main.py  utils.py
tests/: test_operations.py
