[tool.poetry]
name = "term-paper"
version = "0.1.0"
description = "stuff"
authors = ["Vladimir Byelov <vladimir.byeloff@gmail.com>"]
readme = "README.md"
packages = [{include = "term_paper"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
